# linear

./: .gitignore  Matrix.h  Matrix.hpp  README.md  Solver.hpp  Span.h  Span.hpp  main.cpp
python/: CMakeLists.txt  README.md  bindings.cpp  pyproject.toml
python/linear/: __init__.py
python/tests/: conftest.py  test_decomposition.py  test_matrix.py  test_numpy_integration.py  test_solvers.py  test_span.py
src/: Matrix.hpp  README.md  Solver.hpp  Span.hpp
